# compiler

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  compile_commands.json  main.cpp  modules.cmake  qodana.yml
.github/workflows/: ci.yml  cmake-single-platform.yml  qodana_code_quality.yml
bench/: main.cpp
c_sources/: first  first.i  first.s
driver/: CMakeLists.txt  Checks.cpp  Checks.h  Checks.hpp  Stages.cpp  Stages.h  Stages.hpp  compiler_driver.cpp  main.cpp  utilities.cpp  utilities.h
include/: Command.h  Log.h  Logger.h  Stages.h  checks.h  command.h  lexer.h  log.hpp  stages.h
input/: Driver  first  first.s  input.c.s
log/: Logger.cpp
src/: CMakeLists.txt  Checks.cpp  Command.cpp  Stages.cpp  checks.cpp  command.cpp  compiler  compiler.cpp  compiler_driver  compiler_driver.cpp  lexer.cpp  lexer.l  log.cpp  main.cpp  stages.cpp
src/compiler/: CMakeLists.txt  compiler.cpp  lexer.cpp
src/driver/: CMakeLists.txt  Stages.cpp  main.cpp
src/log/: CMakeLists.txt
test/: CMakeLists.txt  TestDriver.cpp  TestLogger.cpp  log_test.cpp  test.cpp
tests/: CMakeLists.txt  ChecksTest.cpp  LogTest.cpp  StagesTest.cpp  TestDriver.cpp  TestLogger.cpp  checks_test.cpp  command_test.cpp  log_test.cpp  stages_test.cpp
